k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: modcluster
  labels:
    app.kubernetes.io/part-of: modcluster-demo
